--- a/src/styles/sass/layouts/_gallery-section.scss
+++ b/src/styles/sass/layouts/_gallery-section.scss
@@ -5,7 +5,6 @@
 
   &__container {
     position: relative;
-    transition: transform 0.3s ease-in-out;
 
     &::before {
       content: "";
@@ -15,16 +14,6 @@
       width: 100%;
       height: 100%;
       background-color: rgba($color: #000000, $alpha: 0.35);
-    }
-
-    &:hover {
-      cursor: pointer;
-      transform: translateY(-2rem);
-    }
-
-    &:is(:hover)::after {
-      bottom: -0.2rem;
-      @include decoration(to left bottom, 100%, 0.6rem, 180deg);
     }
   }
 
@@ -71,6 +60,22 @@
 }
 
 @include respond-to($breakpoint-tablets) {
+  .gallery {
+    &__container {
+      transition: transform 0.3s ease-in-out;
+
+      &:hover {
+        cursor: pointer;
+        transform: translateY(-2rem);
+      }
+
+      &:is(:hover)::after {
+        bottom: -0.2rem;
+        @include decoration(to left bottom, 100%, 0.6rem, 180deg);
+      }
+    }
+  }
+
   .gallery__image {
     img {
       width: 38.4rem;
